tests/ui/unsafe/unsafe-not-inherited.thirunsafeck.stderr
error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/unsafe-not-inherited.rs:8:31
   |
LL |     unsafe {static BAR: u64 = FOO;}
   |     ------                    ^^^ use of mutable static
   |     |
   |     items do not inherit unsafety from separate enclosing items
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: call to unsafe function `unsafe_call` is unsafe and requires unsafe function or block
  --> $DIR/unsafe-not-inherited.rs:20:13
   |
LL |     unsafe {
   |     ------ items do not inherit unsafety from separate enclosing items
...
LL |             unsafe_call();
   |             ^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.
